# simready-foundation

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  build_docs.py  repo.sh  repo.toml  requirements-docs.txt
nv_core/sr_specs/: .gitignore  README.md  _redirects  pyproject.toml  requirements.txt
nv_core/sr_specs/config/: base-articulation.json  geometry.json  hierarchy.json  materials.json  physics-driven-joints.json  physics-joints.json  physics-rigid-bodies.json  prop-robotics-isaac.json  prop-robotics-physx.json  robot-core.json  units.json
nv_core/sr_specs/docs/: changelog.md  conf.py  config.json  index.md
nv_core/sr_specs/docs/_static/: tags.css
nv_core/sr_specs/docs/capabilities/: __init__.py  capabilities.md
nv_core/sr_specs/docs/features/: FET_000-base_neutral-0.1.0-core.md  FET_000_base_neutral-0.1.0-core.json  FET_001-minimal.md  FET_001_base_neutral-0.1.0-minimal.json  FET_001_base_neutral-1.0.0-minimal.json  FET_002-posable_bodies.md  FET_002_base_neutral-0.1.0-posable_bodies.json  FET_003-rigid_body_physics.md  FET_003_base_neutral-0.1.0-rigid_body_physics.json  FET_003_base_physx-0.1.0-rigid_body_physics.json  FET_003_base_physx-0.2.0-rigid_body_physics.json  FET_004-simulate_multi_body_physics.md  FET_004_base_neutral-0.1.0-simulate_multi_body_physics.json  FET_004_base_physx-0.1.0-simulate_multi_body_phyics.json  FET_004_base_physx-0.2.0-simulate_multi_body_phyics.json  FET_004_robot_physx-0.1.0-simulate_multi_body_phyics.json  FET_004_robot_physx-0.2.0-simulate_multi_body_phyics.json  FET_005-simulate_grasp_physics.md  (+25 more)
(+519 files in other folders)
